# APOLLO

./: APOLLO A Command & Control Mainframe.docx  Cargo.toml  LICENSE  README.md  Security_Codes.txt  build.rs  config.json  directive_dictionary.json  directives.json
proto/: ccp.proto
src/: main.rs
src/auth/: mod.rs  setup.rs  storage.rs  types.rs
src/core/: config_manager.rs  dictionary.rs  dictionary_manager.rs  directives.rs  engine.rs  mod.rs  security.rs
src/grpc/: mod.rs
src/logging/: mod.rs
src/state/: app_state.rs  config.rs  mod.rs
src/ui/: login.rs  mod.rs  splash.rs
src/ui/views/: dictionary_editor.rs  directives.rs  log_viewer.rs  mod.rs  plugin_mgmt.rs  plugin_monitor.rs
