[package]
name = "apollo_mainframe"
version = "0.1.0"
edition = "2021"

[dependencies]
# For the gRPC Server & Communication
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.11"
prost = "0.12"

# For the Terminal User Interface (TUI)
ratatui = { version = "0.26", features = ["all-widgets"] }
crossterm = "0.27"
tui-input = "0.8.0"

# For Data Handling & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
itertools = "0.12"

# For Logging
log = "0.4"
fern = { version = "0.6", features = ["date-based"] }
chrono = "0.4"

# Authentication & Security
bcrypt = "0.15"
rpassword = "7.3"

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
hostname = "0.4"

[build-dependencies]
tonic-build = "0.11"